fix(web): restore editor toolbar field alignment

--- a/web/src/app/editor/toolbar/toolbar.component.scss
+++ b/web/src/app/editor/toolbar/toolbar.component.scss
@@ -18,11 +18,11 @@ mat-form-field {
   margin-left: 12px;
   flex: 1;
   align-self: center;
-  height: 54px;
+  height: 34px;
   --mat-form-field-filled-container-color: transparent;
   --mdc-filled-text-field-container-color: transparent;
-  --mat-form-field-container-height: 54px;
-  --mat-form-field-container-vertical-padding: 15px;
+  --mat-form-field-container-height: 34px;
+  --mat-form-field-container-vertical-padding: 5px;
 }
 
 mat-form-field:first-of-type {
@@ -35,18 +35,18 @@ mat-form-field:first-of-type {
 
 :host ::ng-deep .mat-mdc-text-field-wrapper {
   background-color: transparent;
-  flex: 0 0 54px;
-  height: 54px;
+  flex: 0 0 34px;
+  height: 34px;
   padding: 0;
 }
 
 :host ::ng-deep .mat-mdc-form-field-flex {
   align-items: center;
-  height: 54px;
+  height: 34px;
 }
 
 :host ::ng-deep .mat-mdc-form-field-infix {
-  min-height: 54px;
-  padding-bottom: 8px;
-  padding-top: 14px;
+  min-height: 34px;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
